# Project-Zero

./: CMakeLists.txt  README.md  note.txt
Nuclear/: testing_site.cpp
assets/objects/: kan.mtl  person.mtl  platform.mtl
breed/: main.c
headers/: Entity.hpp  GameObject.hpp  GameScene.hpp  WindowRenderer.hpp  app.hpp  camera.hpp  objectGenerator.hpp  objectLoader.hpp  shaders.hpp  shapeData.hpp  shapeGenerator.hpp  timer.hpp  vertex.hpp  window.hpp
include/glad/: gl.h  glad.h
shaders/: fragmentShader.fs  testFrag.fs  testVert.vs  vertexShader.vs
src/: Entity.cpp  GameScene.cpp  WindowRenderer.cpp  app.cpp  camera.cpp  gl.c  glad.c  main.cpp  objectGenerator.cpp  shaders.cpp  shapeData.cpp  shapeGenerator.cpp  window.cpp
